package 结构型设计模式.门面模式.demo;

/**
 * @ProjectName: 设计模式
 * @ClassName: SubSystemA
 * @Auther: wczy
 * @Date: 2020-12-09 20:21
 * @Version 1.0
 **/
public class SubSystemB {
    public void doB(){
        System.out.println("Orange Code BBB ");
    }
}
